# pcg-cpp

./: CMakeLists.txt
.github/workflows/: build.yml
include/: pcg_extras.hpp  pcg_random.hpp
sample/: cppref-sample.cpp
